--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -4,6 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.PageFragment">
+    tools:context=".presentation.view.PageFragment"
+    android:background="@drawable/layout_bg"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="100dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginBottom="5dp">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        tools:itemCount="100"
+        tools:listitem="@layout/pokemon_item_layout"/>
 
 </androidx.core.widget.NestedScrollView>
