--- a/app/src/main/res/layout/pokemon_item_layout.xml
+++ b/app/src/main/res/layout/pokemon_item_layout.xml
@@ -6,17 +6,31 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textPokemon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
         android:height="32dp"
         android:fontFamily="@font/lato_bold"
         android:paddingStart="5dp"
-        android:paddingTop="5dp"
+        android:paddingEnd="5dp"
         android:text="TextView"
-        android:textColor="@color/dark_blue"
-        android:textSize="18sp"
+        android:textColor="@color/blue"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/viewUnderline"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPokemon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
