--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/lato_bold"
+        android:fontFamily="@font/lato_black"
         android:text="Pokemons"
         android:textColor="@color/dark_blue"
         android:textSize="34sp"
