--- a/app/src/main/res/layout/pokemon_item_layout.xml
+++ b/app/src/main/res/layout/pokemon_item_layout.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/lato_bold"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="TextView"
+        android:text="@string/pokemonNameDummy"
         android:textColor="@color/blue"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
